--- a/app/views/phrases/home.html.erb
+++ b/app/views/phrases/home.html.erb
@@ -1,10 +1,12 @@
-<%= link_to "Generate Phrase", "get_random_phrase", remote: true, id: "gen_link" %>
-<%= link_to "Clear Phrases", "reset_phrases", remote: true, id: "clear_link" %>
-<ul id="phrase-list">
-	<% @phrases.each do |p| %>
-	<li class="phrase"><%= p.body %></li>
-	<% end %>
-</ul>
-<h1 id="phrase-test"></h1>
+<div class="home-container">
+	<%= link_to "Generate Phrase", "get_random_phrase", method: "get", remote: true, id: "gen_link", class: "btn btn-secondary" %>
+	<%= link_to "Clear Phrases", "reset_phrases", method: "get", remote: true, id: "clear_link", class: "btn btn-danger" %>
+	<ul id="phrase-list">
+		<% @phrases.each do |p| %>
+		<li class="phrase"><%= p.body %></li>
+		<% end %>
+	</ul>
+	<h1 id="phrase-test"></h1>
+</div>
 
 
